
	[gropdf]: slanting lowercase greek characters. See
	https://lists.gnu.org/archive/html/groff/2022-07/msg00210.html

	* tmac/pdf.tmac: to prevent gropdf from slanting all lowercase
	greek characters only slant if the glyp is sourced from a
	special font, not if the regular font contains greek glyphs.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::usable_as_delimiter):
	(do_non_interpreted, interpolate_arg): Recast diagnostic
	messages for clarity.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Initialize section number registers. Fixes
	warnings when starting section numbering at a depth greater than
	1.

	Fixes <https://savannah.gnu.org/bugs/?62812>.

2022-07-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PAGE): Use 'grep -q' instead of redirecting
	standard output to null device.  The '-q' option was
	standardized in POSIX Issue 5 (1997).  Also drop the redirection
	of the standard error stream; we have already checked the file
	named in "$descfile" for existence and readability.  grep should
	not emit diagnostic messages.

2022-07-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PAGE): Macro used awk(1) without
	`AC_REQUIRE`-ing a relevant macro or checking for its existence.
	Fortunately, sed is powerful enough for our needs.  Remove
	dependency on awk.  Cope with "search" directive in resolv.conf
	having multiple arguments.  Match "domain" directive in same
	file instead of "dom", which I cannot find attested (this logic
	dates to 1991).  Rename `dom` shell variable to `domains` for
	clarity, since its multiplicity could be greater than 1.

2022-07-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PAGE): Refactor: drop AC_DEFINE of
	`PAGEA4`.  This symbol appears to be a relic; it is nowhere
	tested or dereferenced.

2022-07-15  G. Branden Robinson <g.branden.robinson@gmail.com>
