@@ -9,6 +9,16 @@
 
 2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/troff/input.cpp (input_char_description): Clear
+	static buffer on every entry to the function so that calling it
+	twice in succession where the second call populates the buffer
+	with less data doesn't return leftover garbage characters.
+	Problem appears to date back to 1991 or earlier.
+
+	Fixes <https://savannah.gnu.org/bugs/?62813>.
+
+2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/troff/input.cpp (token::usable_as_delimiter):
 	(do_non_interpreted, interpolate_arg): Recast diagnostic
 	messages for clarity.
